# DSA

Course1/Week1/: CMakeLists.txt
Course1/Week1/src/: karatsuba.hpp  merge_sort.hpp
Course1/Week1/test/: CMakeLists.txt  test_karatsuba.cpp  test_merge_sort.cpp
Course2/Week1/: CMakeLists.txt
Course2/Week1/src/: bfs.cpp  connected_comp.cpp  connected_graph.cpp  cycle.h  dfs.cpp  graph.h  scc.cpp  topological.cpp
Course2/Week1/test/: CMakeLists.txt  test_bfs.cpp  test_connected_comp.cpp  test_connected_graph.cpp  test_cycle.cpp  test_dfs.cpp  test_scc.cpp  test_topological.cpp
Course2/Week1/test/graphs/: graph1.txt  graph10.txt  graph11.txt  graph12.txt  graph13.txt  graph15.txt  graph2.txt  graph3.txt  graph4.txt  graph5.txt  graph6.txt  graph7.txt  graph8.txt  graph9.txt
Course2/Week2/: CMakeLists.txt
Course2/Week2/src/: dijkstra.cpp
Course2/Week2/test/: CMakeLists.txt  test_dijkstra.cpp
Course2/Week2/test/graphs/: weightedgraph0.txt  weightedgraph1.txt  weightedgraph2.txt
Course2/Week3/: CMakeLists.txt
Course2/Week3/src/: heap.hpp  istree.h  tree.h
Course2/Week3/test/: CMakeLists.txt  test_heap.cpp  test_tree.cpp
Course2/Week3/test/trees/: tree1.txt
